# cratesort

./: .gitignore  AGENTS.md  CLAUDE-CS.md  CLAUDE_TASK_PROMPT.md  GEMINI-CS.md  cratesuite_notebook_source.md
.claude/: settings.local.json
_resources/: CrateSort-Prompt-LibraryBaselineSync.md  CrateSort-Prompt-LibraryFixes.md  CrateSort-Prompt-OrganizeView.md  CrateSort-Prompt-QTreeWidgetItemHashFix.md  CrateSort-Prompt-SignalWiring.md  CrateSort-Session-Handoff-3.md  prompt_analyze_library_modal.md  prompt_auto_classify.md  prompt_classification_complete_flag.md  prompt_classification_guard_dialog_rewrite.md  prompt_confidence_fallbacks.md  prompt_data_flow_hardening.md  (+9 more)
cratesort/: pyproject.toml  requirements.txt
cratesort/assets/icons/app/: CrateSort.icns
cratesort/src/core/: artist_consolidator.py  classifier.py  duplicate_consolidator.py  duplicate_detector.py  file_organizer.py  filename_cleaner.py  metadata_fixer.py  metadata_merger.py  scanner.py
cratesort/src/gui/: classifier_view.py  crate_manager.py  dashboard.py  duplicate_review_view.py  library_browser.py  main_window.py  organize_view.py  overlays.py  settings_view.py  theme.py  yt_import_dialog.py
cratesort/src/serato/: crate_reader.py  crate_writer.py  database_reader.py  database_writer.py  markers_reader.py  markers_writer.py  path_rewriter.py
cratesort/src/utils/: checkpoint.py  normalize.py  sanitizer.py  serato_guard.py  the_handler.py  undo_manager.py
cratesort/tests/: run_classifier.py  run_consolidation.py  run_organizer.py  run_phase2.py  run_scanner.py  run_serato.py
(+75 files in other folders)
